k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: merlai
  labels:
    name: merlai
    app: merlai
